<resources>
    <string name="san_serif">sans-serif</string>
    <string name="san_serif_light">sans-serif-light</string>
    <string name="san_serif_condensed">sans-serif-condensed</string>
    <string name="san_serif_thin">sans-serif-thin</string>
    <string name="app_name">Outbound</string>
    <string name="welcome_activity_name">Welcome</string>
    <string name="singup_with_mail_activity_name">Sign Up</string>
    <string name="main_activity_name">Outbound</string>
    <string name="title_activity_login_with_email">Log In</string>
    <string name="action_settings">settings</string>
    <string name="parse_app_id">xURQt44xaF5cavtJ5TAPo7YR6fNVoEaM5b6oiKzA</string>
    <string name="parse_client_key">Jw9UZJK5cSV6czmtU4xBFMMysPUMIC5Vc3HDkfWC</string>
    <string name="facebook_app_id">287894818068799</string>
    <string name="login_text_or">or</string>
    <string name="login_text_question_have_account">Already have\nan account?</string>
    <string name="login_text_term_condition_privacy">By joinnig Outbound, you agree to the\n<b><u>Terms &amp; Condition</u></b> and <b><u>Privacy Policy</u></b></string>
    <string name="session_invalid_error">Your current session is no longer valid. Please log in again.</string>
    <string name="logn_generic_error">Something went wrong. Please retry.</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="sign_up_back">Back</string>
    <string name="sign_up_join">Join</string>
    <string name="sing_up_user_name_hint">Username</string>
    <string name="sing_up_user_email_hint">Email</string>
    <string name="sing_up_user_password_hint">Password</string>
    <string name="sing_up_user_male">Male</string>
    <string name="sing_up_user_female">Female</string>
    <string name="sing_up_date_of_birth">DATE OF BIRTH</string>
    <string name="sing_up_date_of_birth_hint">dd/mm/yy</string>
    <string name="sing_up_nationality">NATIONALITY</string>
    <string name="sing_up_nationality_hint">Country</string>
    <string name="sing_up_hometown_hint">Hometown (optional)</string>
    <string name="sing_up_traveller_type">TRAVELLER TYPE</string>
    <string name="sing_up_traveller_type_hint">Traveller Type</string>
    <string name="sing_up_type_select_hint">Select</string>
    <string name="sing_up_about_you_hint">About you, describe yourself…</string>
    <string name="singup_join_via_sing_up_text">Join</string>
    <string name="title_facebook_login">Facebook Login</string>
    <string name="error_invalid_password">This Password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="sing_up_user_spinner_hint">dd/mm/yy</string>
    <string name="hello_world">Hello world!</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="forgotten_password"><u>Forgot Password?</u></string>
    <string name="sing_up_country">Country</string>
    <string name="sing_up_user_hown_town_hint">Hometown (optional)</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_fragment_title">Profile</string>
    <string name="action_bar_noticebard_title">Noticeboard</string>
    <string name="action_bar_events_title">Events Around Me</string>
    <string name="action_bar_explore_trips_title">Explore Trips</string>
    <string name="search_fragment_title">Search</string>
    <string name="test_message">Lorem ipsum dolor sit amet, nibh enim volutpat feugiat semper nostra est, amet pellentesque condimentum elementum purus. Viverra nascetur, blandit sapien quisque lectus, curabitur maecenas. Commodo nullam sit nullam mi erat aliquet. Donec metus nisl vehicula donec. Morbi libero nulla, felis sagittis felis in vehicula, suspendisse nunc lacinia sodales. Non ac egestas vehicula odio, nunc mattis ut neque quam nulla, non nulla vivamus iaculis augue ultrices iusto. Turpis dolor magna justo libero, semper lectus vehicula vel. Aliquam iaculis. Nec integer sapien dis purus, praesent eget hendrerit nec proin sollicitudin. Eget lacus ac velit justo in, pharetra leo massa ut lacus diam convallis, quam integer cras odio nec. Neque integer morbi. Nulla suspendisse commodo quis, justo pellentesque vivamus, pellentesque fusce risus erat scelerisque curabitur, quisque varius consectetuer.</string>
    <string name="test_message_medium">Lorem ipsum dolor sit amet, nibh enim volutpat feugiat semper nostra est, amet pellentesque condimentum elementum purus. Viverra nascetur, blandit sapien quisque lectus, curabitur maecenas. Commodo nullam sit nullam mi erat aliquet. Donec metus nisl vehicula donec. Morbi libero nulla, felis sagittis felis in vehicula, suspendisse nunc lacinia sodales. </string>
    <string name="test_message_short">Lorem ipsum dolor sit amet, nibh enim volutpat feugiat semper nostra est, amet pellentesque condimentum elementum purus.</string>
    <string name="test_message_very_short">Lorem ipsum dolor sit amet.</string>
    <string name="my_friends_fragment_title">Friends</string>
    <string name="my_trips_fragment_title">My Trips</string>
    <string name="my_travel_history_fragment_title">Travel History</string>
    <string name="my_events_fragment_title">My Events</string>
    <string name="settings_fragment_title">Settings</string>
    <string name="message_activity_title">Name Surname</string>
    <string name="explore_trips_information">Explore destinations to find fellow travellers and add your new trips below.</string>
    <string name="explore_trips_search_fragment_title">Explore Trips</string>
    <string name="explore_trips_search_information">Search locations or destinations to see what other Outbounders will be there.</string>
    <string name="explore_trips_add_information">Where are you travelling to?\n\nAdd your trips so that it shows up on your profile and other users can message you if your trips are similar.</string>
    <string name="explore_trips_add_fragment_title">Add Trip</string>
    <string name="event_details_fragment_title">Event Name</string>
    <string name="search_people_detail_fragment_title">Search</string>
    <string name="outbounder_fragment_title" />
    <string name="friend_request_title">Friend Request</string>
    <string name="friend_request_body">Your friend request has been sent</string>
    <string name="people_friend_fragment_title">Friends</string>
    <string name="notice_board_fragment_search_message_title">Search Noticeboard</string>
    <string name="notice_board_fragment_create_message_title">Create New Notice</string>
    <string name="event_search_fragment_title">Event Search</string>
    <string name="notice_board_message_activity_title">NoticeBoard</string>
    <string name="my_trips_detail_fragment_title">Outbounders Trip</string>
    <string name="event_create_fragment_title">Create Event</string>
    <string-array name="traveller_type">
        <item>Backpacker</item>
        <item>Adventurer</item>
        <item>RV/Caravaner</item>
        <item>Corporate</item>
        <item>Solo</item>
        <item>Pair</item>
        <item>Group (3+)</item>
        <item>Family</item>
    </string-array>
</resources>