<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.outbound.loginSignUp.LoginWithEmail">

    <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/list_email"
                    android:paddingLeft="@dimen/outbound_sign_up_with_email_icon_padding_left"
                    android:paddingTop="@dimen/outbound_sign_up_with_email_icon_padding_top"
                    android:paddingRight="@dimen/outbound_sign_up_with_email_icon_padding_right"
                    android:paddingBottom="@dimen/outbound_sign_up_with_email_icon_padding_bottom"/>

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:drawablePadding="1dp"
                    android:singleLine="true"
                    />
                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/list_password"
                    android:paddingLeft="@dimen/outbound_sign_up_with_email_icon_padding_left"
                    android:paddingTop="@dimen/outbound_sign_up_with_email_icon_padding_top"
                    android:paddingRight="@dimen/outbound_sign_up_with_email_icon_padding_right"
                    android:paddingBottom="@dimen/outbound_sign_up_with_email_icon_padding_bottom"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    />

             </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/forgotten_password"
                android:clickable="true"
                android:layout_gravity="center_horizontal"
                android:padding="15dp"

                />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:background="@drawable/btn_enter_button"
                android:paddingBottom="20dp"/>

         </LinearLayout>


</RelativeLayout>
